# dataset-augmenter

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: annotations.py  augment.py  config.py  pipeline.py  utils.py
backend/: main.py  pyproject.toml
backend/app/: augment.py  pipeline.py  utils.py
tests/: test_annotations.py  test_pipeline.py  test_utils.py
web/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/app/: layout.tsx  page.tsx
web/app/project/[projectId]/version/new/: page.tsx
web/components/: PreprocessingStepCard.tsx  Sidebar.tsx  StepWrapper.tsx
web/components/ui/: button.tsx
web/store/: useVersionStore.ts
